crates/magia-rust/tests/fixtures/snapshots/async_io.snap
---
source: crates/magia-rust/tests/render_golden.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-144.00 -178.30 344.00 356.59">
<defs>
<path id="sig-arc-0-0" d="M-132.00,0.00 C-132.00,-72.90 -72.90,-132.00 0.00,-132.00 C72.90,-132.00 132.00,-72.90 132.00,0.00" fill="none"/>
</defs>
<g class="layer-control-flow">
<line class="edge-control-flow" x1="120.00" y1="0.00" x2="148.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-60.00" y1="-103.92" x2="-74.00" y2="-128.17" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-60.00" y1="103.92" x2="-74.00" y2="128.17" stroke="#000000" stroke-width="1.00"/>
<circle class="main-ring" cx="0.00" cy="0.00" r="120.00" fill="none" stroke="#000000" stroke-width="2.00"/>
<circle class="main-ring-async" cx="0.00" cy="0.00" r="115.00" fill="none" stroke="#000000" stroke-width="1.00"/>
<line class="sym-early-return" x1="-110.00" y1="0.00" x2="-132.00" y2="0.00" stroke="#000000" stroke-width="1.5"/>
<polygon class="sym-early-return" points="-132.00,0.00 -126.00,-4.00 -126.00,4.00" fill="#000000"/>
</g>
<g class="layer-effects">
<circle class="op-dot" cx="104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-52.00" cy="-90.07" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-52.00" cy="90.07" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="162.00" cy="0.00" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="-81.00" cy="-140.30" r="14.00" fill="#1f4dff"/>
<circle class="summon-glyph" cx="-81.00" cy="140.30" r="14.00" fill="#000000"/>
</g>
<g class="layer-type-info">
<text class="signature" font-size="11" fill="#000000"><textPath href="#sig-arc-0-0" startOffset="50%" text-anchor="middle">async fn async_io (url : &amp; str) -&gt; Result &lt; String , Error &gt;</textPath></text>
<line class="return-path-ok" x1="-120.00" y1="0.00" x2="-146.00" y2="-11.70" stroke="#000000" stroke-width="1"/>
<line class="return-path-err" x1="-120.00" y1="0.00" x2="-146.00" y2="11.70" stroke="#000000" stroke-width="1" stroke-dasharray="4 3"/>
</g>
</svg>
