crates/magia-rust/tests/fixtures/snapshots/belka_loop_accumulate.snap
---
source: crates/magia-rust/tests/belka_golden.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-382.15 -382.15 764.29 764.29">
<defs>
<radialGradient id="belka-field-genesis"><stop offset="0" stop-color="#2f86c9" stop-opacity="0.28"/><stop offset="1" stop-color="#2f86c9" stop-opacity="0"/></radialGradient>
<radialGradient id="belka-field-transmute"><stop offset="0" stop-color="#c98a2f" stop-opacity="0.28"/><stop offset="1" stop-color="#c98a2f" stop-opacity="0"/></radialGradient>
<radialGradient id="belka-field-consume"><stop offset="0" stop-color="#b04a5a" stop-opacity="0.28"/><stop offset="1" stop-color="#b04a5a" stop-opacity="0"/></radialGradient>
</defs>
<g class="belka-field">
<circle class="field-genesis" cx="0.00" cy="-120.00" r="66.00" fill="url(#belka-field-genesis)"/>
<circle class="field-transmute" cx="-168.87" cy="97.50" r="157.15" fill="url(#belka-field-transmute)"/>
<circle class="field-consume" cx="103.92" cy="60.00" r="66.00" fill="url(#belka-field-consume)"/>
</g>
<g class="belka-flows">
<line class="belka-flow" x1="-20.24" y1="-93.93" x2="-138.73" y2="58.68" stroke="#555555" stroke-width="1.90" stroke-opacity="0.75"/>
<polygon class="belka-flow-head" points="-142.41,63.42 -141.68,55.13 -134.57,60.65" fill="#555555"/>
<line class="belka-flow" x1="-126.13" y1="91.62" x2="65.29" y2="65.31" stroke="#555555" stroke-width="1.90" stroke-opacity="0.75"/>
<polygon class="belka-flow-head" points="71.23,64.49 64.91,69.91 63.68,60.99" fill="#555555"/>
</g>
<g class="belka-poles">
<circle class="belka-pole" cx="0.00" cy="-120.00" r="33.00" fill="#ffffff" fill-opacity="0.6" stroke="#2f86c9" stroke-width="2"/>
<text class="belka-pole-label" x="0.00" y="-163.00" font-size="12" fill="#2f86c9" text-anchor="middle">生成</text>
<circle class="op-dot" cx="18.03" cy="-120.00" r="3.50" fill="#000000"/>
<circle class="belka-pole" cx="-168.87" cy="97.50" r="43.15" fill="#ffffff" fill-opacity="0.6" stroke="#c98a2f" stroke-width="2"/>
<text class="belka-pole-label" x="-218.37" y="130.07" font-size="12" fill="#c98a2f" text-anchor="middle">変換</text>
<circle class="op-dot" cx="-158.58" cy="97.50" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-182.02" cy="109.54" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-166.86" cy="74.58" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-152.31" cy="119.11" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-199.27" cy="92.12" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-140.08" cy="79.18" r="3.50" fill="#000000"/>
<circle class="belka-pole" cx="103.92" cy="60.00" r="33.00" fill="#ffffff" fill-opacity="0.6" stroke="#b04a5a" stroke-width="2"/>
<text class="belka-pole-label" x="144.63" y="87.50" font-size="12" fill="#b04a5a" text-anchor="middle">消費</text>
<circle class="op-dot" cx="121.95" cy="60.00" r="3.50" fill="#000000"/>
</g>
<text class="signature" x="0" y="-366.15" font-size="11" fill="#000000" text-anchor="middle">fn loop_accumulate (items : &amp; [u8]) -&gt; u32</text>
</svg>
