crates/magia-rust/tests/fixtures/snapshots/dense_dispatch.snap
---
source: crates/magia-rust/tests/render_golden.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-428.20 -410.86 628.20 738.08">
<defs>
<path id="sig-arc-0-0" d="M-132.00,0.00 C-132.00,-72.90 -72.90,-132.00 0.00,-132.00 C72.90,-132.00 132.00,-72.90 132.00,0.00" fill="none"/>
</defs>
<g class="layer-control-flow">
<line class="edge-control-flow" x1="120.00" y1="0.00" x2="148.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-21.53" y1="-118.05" x2="-27.99" y2="-153.47" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-45.21" y1="-247.91" x2="-50.24" y2="-275.46" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-80.61" y1="-88.89" x2="-104.79" y2="-115.56" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-169.28" y1="-186.68" x2="-188.09" y2="-207.42" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-134.69" y1="-199.06" x2="-132.93" y2="-235.02" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-128.25" y1="-330.91" x2="-126.88" y2="-358.87" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-162.46" y1="-191.84" x2="-177.29" y2="-215.59" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-115.39" y1="-32.94" x2="-150.01" y2="-42.82" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-219.48" y1="-97.95" x2="-236.97" y2="-129.42" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-283.61" y1="-213.33" x2="-297.22" y2="-237.80" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-242.32" y1="-69.18" x2="-269.24" y2="-76.86" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-115.39" y1="32.94" x2="-150.01" y2="42.82" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-242.32" y1="69.18" x2="-269.24" y2="76.86" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-238.12" y1="32.68" x2="-269.58" y2="15.19" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-353.49" y1="-31.45" x2="-377.97" y2="-45.05" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-222.17" y1="96.34" x2="-237.35" y2="119.87" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-80.61" y1="88.89" x2="-104.79" y2="115.56" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-169.28" y1="186.68" x2="-188.09" y2="207.42" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-182.29" y1="135.11" x2="-208.68" y2="125.77" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-184.75" y1="156.30" x2="-212.59" y2="159.32" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-21.53" y1="118.05" x2="-27.99" y2="153.47" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-45.21" y1="247.91" x2="-50.24" y2="275.46" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="8.60" y1="184.54" x2="34.97" y2="175.12" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-83.48" y1="210.98" x2="-110.83" y2="216.99" stroke="#000000" stroke-width="1.00"/>
<circle class="main-ring" cx="0.00" cy="0.00" r="120.00" fill="none" stroke="#000000" stroke-width="2.00"/>
<circle class="aux-ring" cx="-36.60" cy="-200.69" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-36.60 -191.69 L-36.60 -200.69 M-36.60 -200.69 L-43.60 -208.69 M-36.60 -200.69 L-29.60 -208.69" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-137.04" cy="-151.12" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-137.04 -142.12 L-137.04 -151.12 M-137.04 -151.12 L-144.04 -159.12 M-137.04 -151.12 L-130.04 -159.12" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-130.59" cy="-282.96" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-130.59 -273.96 L-130.59 -282.96 M-130.59 -282.96 L-137.59 -290.96 M-130.59 -282.96 L-123.59 -290.96" stroke="#000000" stroke-width="1" fill="none"/>
<line class="sym-early-return" x1="-128.74" y1="-320.92" x2="-127.66" y2="-342.89" stroke="#000000" stroke-width="1.5"/>
<polygon class="sym-early-return" points="-127.66,-342.89 -123.96,-336.70 -131.95,-337.09" fill="#000000"/>
<circle class="aux-ring" cx="-196.16" cy="-56.00" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-196.16 -47.00 L-196.16 -56.00 M-196.16 -56.00 L-203.16 -64.00 M-196.16 -56.00 L-189.16 -64.00" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-260.29" cy="-171.37" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<polygon class="sym-loop" points="-255.29,-213.37 -255.29,-205.37 -265.29,-209.37" fill="#000000"/>
<circle class="aux-ring" cx="-196.16" cy="56.00" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-196.16 65.00 L-196.16 56.00 M-196.16 56.00 L-203.16 48.00 M-196.16 56.00 L-189.16 48.00" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-311.54" cy="-8.13" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<polygon class="sym-loop" points="-306.54,-50.13 -306.54,-42.13 -316.54,-46.13" fill="#000000"/>
<circle class="aux-ring" cx="-137.04" cy="151.12" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-137.04 160.12 L-137.04 151.12 M-137.04 151.12 L-144.04 143.12 M-137.04 151.12 L-130.04 143.12" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-36.60" cy="200.69" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-36.60 209.69 L-36.60 200.69 M-36.60 200.69 L-43.60 192.69 M-36.60 200.69 L-29.60 192.69" stroke="#000000" stroke-width="1" fill="none"/>
</g>
<g class="layer-effects">
<circle class="op-dot" cx="104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="162.00" cy="0.00" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-4.60" cy="-200.69" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-52.75" cy="-289.23" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-105.04" cy="-151.12" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-169.04" cy="-151.12" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-197.49" cy="-217.79" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-98.59" cy="-282.96" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-126.20" cy="-372.86" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="-184.70" cy="-227.46" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-164.16" cy="-56.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-228.16" cy="-56.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-228.29" cy="-171.37" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-304.02" cy="-250.04" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="-282.71" cy="-80.71" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-164.16" cy="56.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-228.16" cy="56.00" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-282.71" cy="80.71" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-279.54" cy="-8.13" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-390.20" cy="-51.86" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="-244.93" cy="131.64" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-105.04" cy="151.12" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-197.49" cy="217.79" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="-221.88" cy="121.10" r="14.00" fill="#7a4a1c"/>
<circle class="summon-glyph" cx="-226.51" cy="160.84" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-4.60" cy="200.69" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-52.60" cy="172.98" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-52.60" cy="228.40" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-52.75" cy="289.23" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="48.15" cy="170.40" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="-124.51" cy="219.99" r="14.00" fill="#000000"/>
</g>
<g class="layer-type-info">
<text class="signature" font-size="11" fill="#000000"><textPath href="#sig-arc-0-0" startOffset="50%" text-anchor="middle">fn dense_dispatch (code : u8 , payload : &amp; [u8]) -&gt; u32</textPath></text>
</g>
</svg>
