crates/magia-rust/tests/fixtures/snapshots/diff_overlay_process_order.snap
---
source: crates/magia-rust/tests/spell_diff.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-275.85 -331.81 477.97 542.62">
<defs>
<path id="sig-arc-0-0" d="M-264.00,0.00 C-264.00,-145.80 -145.80,-264.00 0.00,-264.00 C145.80,-264.00 264.00,-145.80 264.00,0.00" fill="none"/>
</defs>
<g class="layer-control-flow">
<line class="edge-control-flow" x1="120.00" y1="0.00" x2="148.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="66.99" y1="-99.56" x2="87.08" y2="-129.43" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="140.67" y1="-209.08" x2="156.30" y2="-232.31" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="115.95" y1="-121.30" x2="117.16" y2="-93.33" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="4.33" y1="-119.92" x2="5.63" y2="-155.90" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="9.09" y1="-251.84" x2="10.10" y2="-279.82" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-97.08" y1="70.53" x2="-126.21" y2="91.69" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-203.87" y1="148.12" x2="-226.52" y2="164.58" stroke="#000000" stroke-width="1.00"/>
<circle class="main-ring" cx="0.00" cy="0.00" r="120.00" fill="none" stroke="#000000" stroke-width="2.00"/>
<circle class="aux-ring" cx="113.88" cy="-169.26" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M113.88 -160.26 L113.88 -169.26 M113.88 -169.26 L106.88 -177.26 M113.88 -169.26 L120.88 -177.26" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="7.36" cy="-203.87" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M7.36 -194.87 L7.36 -203.87 M7.36 -203.87 L0.36 -211.87 M7.36 -203.87 L14.36 -211.87" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-165.04" cy="119.91" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<polygon class="sym-loop" points="-160.04,77.91 -160.04,85.91 -170.04,81.91" fill="#000000"/>
</g>
<g class="layer-effects">
<circle class="op-dot" cx="104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="32.14" cy="-98.91" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-84.14" cy="-61.13" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-84.14" cy="61.13" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="32.14" cy="98.91" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="162.00" cy="0.00" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="145.88" cy="-169.26" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="81.88" cy="-169.26" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="164.12" cy="-243.93" r="14.00" fill="#000000"/>
<circle class="summon-glyph" cx="117.77" cy="-79.34" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="39.36" cy="-203.87" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="10.61" cy="-293.81" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-133.04" cy="119.91" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-237.85" cy="172.81" r="14.00" fill="#000000"/>
</g>
<g class="layer-type-info">
<text class="signature" font-size="11" fill="#000000"><textPath href="#sig-arc-0-0" startOffset="50%" text-anchor="middle">fn process_order (count : u32) -&gt; u32</textPath></text>
</g>
<g class="overlay-diff">
<circle class="diff-removed" cx="-154.31" cy="49.31" r="14.00" fill="none" stroke="#909090" stroke-width="2.50" stroke-opacity="0.60" stroke-dasharray="5 4"/>
<circle class="diff-changed" cx="0.00" cy="0.00" r="125.00" fill="none" stroke="#00a0c0" stroke-width="2.50"/>
<circle class="diff-changed" cx="113.88" cy="-169.26" r="53.00" fill="none" stroke="#00a0c0" stroke-width="2.50"/>
<circle class="diff-added" cx="117.77" cy="-79.34" r="19.00" fill="none" stroke="#d4a017" stroke-width="2.50"/>
<circle class="diff-added" cx="7.36" cy="-203.87" r="53.00" fill="none" stroke="#d4a017" stroke-width="2.50"/>
<circle class="diff-added" cx="10.61" cy="-293.81" r="19.00" fill="none" stroke="#d4a017" stroke-width="2.50"/>
</g>
</svg>
