crates/magia-rust/tests/fixtures/snapshots/for_loop.snap
---
source: crates/magia-rust/tests/render_golden.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-185.00 -292.61 329.00 436.61">
<defs>
<path id="sig-arc-0-0" d="M-132.00,0.00 C-132.00,-72.90 -72.90,-132.00 0.00,-132.00 C72.90,-132.00 132.00,-72.90 132.00,0.00" fill="none"/>
</defs>
<g class="layer-control-flow">
<line class="edge-control-flow" x1="-60.00" y1="-103.92" x2="-78.00" y2="-135.10" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-126.00" y1="-218.24" x2="-140.00" y2="-242.49" stroke="#000000" stroke-width="1.00"/>
<circle class="main-ring" cx="0.00" cy="0.00" r="120.00" fill="none" stroke="#000000" stroke-width="2.00"/>
<circle class="aux-ring" cx="-102.00" cy="-176.67" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<polygon class="sym-loop" points="-97.00,-218.67 -97.00,-210.67 -107.00,-214.67" fill="#000000"/>
</g>
<g class="layer-effects">
<circle class="op-dot" cx="104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-52.00" cy="-90.07" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-52.00" cy="90.07" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-70.00" cy="-176.67" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-147.00" cy="-254.61" r="14.00" fill="#000000"/>
</g>
<g class="layer-type-info">
<text class="signature" font-size="11" fill="#000000"><textPath href="#sig-arc-0-0" startOffset="50%" text-anchor="middle">fn for_loop (items : &amp; [u8]) -&gt; u32</textPath></text>
</g>
</svg>
