crates/magia-rust/tests/fixtures/snapshots/if_branch.snap
---
source: crates/magia-rust/tests/render_golden.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-332.00 -144.00 532.00 288.00">
<defs>
<path id="sig-arc-0-0" d="M-132.00,0.00 C-132.00,-72.90 -72.90,-132.00 0.00,-132.00 C72.90,-132.00 132.00,-72.90 132.00,0.00" fill="none"/>
</defs>
<g class="layer-control-flow">
<line class="edge-control-flow" x1="120.00" y1="0.00" x2="148.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-120.00" y1="0.00" x2="-156.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-252.00" y1="0.00" x2="-280.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-112.72" y1="41.15" x2="-146.54" y2="53.49" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="-236.72" y1="86.41" x2="-263.02" y2="96.01" stroke="#000000" stroke-width="1.00"/>
<circle class="main-ring" cx="0.00" cy="0.00" r="120.00" fill="none" stroke="#000000" stroke-width="2.00"/>
<circle class="aux-ring" cx="-204.00" cy="0.00" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-204.00 9.00 L-204.00 0.00 M-204.00 0.00 L-211.00 -8.00 M-204.00 0.00 L-197.00 -8.00" stroke="#000000" stroke-width="1" fill="none"/>
<circle class="aux-ring" cx="-191.63" cy="69.95" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M-191.63 78.95 L-191.63 69.95 M-191.63 69.95 L-198.63 61.95 M-191.63 69.95 L-184.63 61.95" stroke="#000000" stroke-width="1" fill="none"/>
</g>
<g class="layer-effects">
<circle class="op-dot" cx="104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="op-dot" cx="-104.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="162.00" cy="0.00" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-172.00" cy="0.00" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-294.00" cy="0.00" r="14.00" fill="#000000"/>
<circle class="op-dot" cx="-159.63" cy="69.95" r="3.50" fill="#000000"/>
<circle class="summon-glyph" cx="-276.18" cy="100.81" r="14.00" fill="#000000"/>
</g>
<g class="layer-type-info">
<text class="signature" font-size="11" fill="#000000"><textPath href="#sig-arc-0-0" startOffset="50%" text-anchor="middle">fn if_branch (flag : bool) -&gt; i32</textPath></text>
</g>
</svg>
