crates/magia-rust/tests/fixtures/snapshots/unsafe_block.snap
---
source: crates/magia-rust/tests/render_golden.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="-144.00 -144.00 420.00 288.00">
<defs>
<path id="sig-arc-0-0" d="M-132.00,0.00 C-132.00,-72.90 -72.90,-132.00 0.00,-132.00 C72.90,-132.00 132.00,-72.90 132.00,0.00" fill="none"/>
</defs>
<g class="layer-control-flow">
<line class="edge-control-flow" x1="114.31" y1="-36.52" x2="140.98" y2="-45.05" stroke="#000000" stroke-width="1.00"/>
<line class="edge-control-flow" x1="120.00" y1="0.00" x2="156.00" y2="0.00" stroke="#000000" stroke-width="1.00"/>
<circle class="main-ring" cx="0.00" cy="0.00" r="120.00" fill="none" stroke="#000000" stroke-width="2.00"/>
<circle class="aux-ring" cx="204.00" cy="0.00" r="48.00" fill="none" stroke="#000000" stroke-width="1.50"/>
<path class="sym-branch" d="M204.00 9.00 L204.00 0.00 M204.00 0.00 L197.00 -8.00 M204.00 0.00 L211.00 -8.00" stroke="#000000" stroke-width="1" fill="none"/>
<line class="sym-early-return" x1="242.00" y1="0.00" x2="264.00" y2="0.00" stroke="#000000" stroke-width="1.5"/>
<polygon class="sym-early-return" points="264.00,0.00 258.00,4.00 258.00,-4.00" fill="#000000"/>
</g>
<g class="layer-effects">
<circle class="op-dot" cx="104.00" cy="0.00" r="3.50" fill="#d92626"/>
<circle class="op-dot" cx="-104.00" cy="0.00" r="3.50" fill="#d92626"/>
<circle class="summon-glyph" cx="154.31" cy="-49.31" r="14.00" fill="#d92626"/>
<circle class="op-dot" cx="236.00" cy="0.00" r="3.50" fill="#d92626"/>
</g>
<g class="layer-type-info">
<text class="signature" font-size="11" fill="#000000"><textPath href="#sig-arc-0-0" startOffset="50%" text-anchor="middle">unsafe fn unsafe_block (ptr : * const u8 , fallback : u8) -&gt; u8</textPath></text>
</g>
</svg>
